--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -11,6 +11,26 @@
   <body>
     <button id="valve0" style="background-color:#FCF5E5">Valve0</button>
     <button id="valve1" style="background-color:#FCF5E5">Valve1</button>
+    <br>
+    <hline>
+      <table>
+        <tr>
+          <td>Air</td>
+          <td> <output id="TempAir" name="TempAir">0</output> </td>
+        </tr>
+        <tr>
+          <td>Water</td>
+          <td><output id="TempWater" name="TempWater">0</output> </td>
+        </tr>
+        <tr>
+          <td>Rel. Humidity</td>
+          <td><output id="RelHum" name="RelHum">0</output> </td>
+        </tr>
+        <tr>
+          <td>Dew point</td>
+          <td><output id="DP" name="DP">0</output> </td>
+        </tr>
+    <hline>
     
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -26,6 +46,15 @@
 
       socket.on('valve1blue', (msg) => {valve1.style.background='#ADD8E6'; });
       socket.on('valve1white', (msg) => {valve1.style.background='#FCF5E5'; });
+      socket.on('envString', (msg) => {
+          console.log('envString: ', msg);
+          const snumbers = msg.toString().replace('Env = ', '');
+          const vNumbers = snumbers.split(', ');
+          document.getElementById('TempAir').innerHTML = vNumbers[0];
+          document.getElementById('TempWater').innerHTML = vNumbers[1];
+          document.getElementById('RelHum').innerHTML = vNumbers[2];
+          document.getElementById('DP').innerHTML = vNumbers[3];
+      });
 
     </script>
   </body>
